--- a/po/translated/de/welcome.html
+++ b/po/translated/de/welcome.html
@@ -17,7 +17,7 @@ Debian stable, um die größte Stabilität und Sicherheit zu gewährleisten.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p class="alert">Bitte ziehen Sie eine Spende in Betracht. Ihre Spende ist Ausdruck Ihrer
+						<td><p class="alert">Bitte ziehen Sie eine Spende in Betracht. Eine Spende ist Ausdruck Ihrer
 Wertschätzung für unsere Arbeit und stellt sicher, dass wir weiter daran
 arbeiten können, SolydXK zu verbessern.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
@@ -46,7 +46,7 @@ und installieren einfach die benötigte Software mit der Software-Manager.</p></
 SolydXK Community, die Ihnen helfen kann, Ihr Problem zu lösen. Sie können
 die Forum-Suche nutzen, um herauszufinden, ob Ihr Problem bereits gelöst ist
 oder Sie starten ein neues Thema mit der Bitte um Hilfe.</p></td>
-					<td rowspan="2"><img class="screenshot" alt="forum" src="../link/screenshots/forum.jpg" /></td>
+					<td rowspan="2"><img class="screenshot" alt="Forum" src="../link/screenshots/forum.jpg" /></td>
 				</tr>
 				<tr>
 					<td class="app_homepage">Forum: <a href="http://forums.solydxk.com/"
