--- a/po/translated/de/wine.html
+++ b/po/translated/de/wine.html
@@ -37,7 +37,7 @@ Windows Viren und Malware zu machen. Das Infektionsrisiko ist aber nicht
 höher als das unter einem nativen MS Windows.</p>
 							<p>Stellen Sie sicher, dass Sie Software nur aus vertrauenswürdigen Quellen
 installieren.</p>
-							<p>RInformieren Sie sich über das <a
+							<p>Informieren Sie sich über das <a
 href="http://wiki.winehq.org/FAQ#head-1c91cac836dd52754c846d2ef62be4f346eebe87">Risiko
 bei der Benutzung von Wine</a></p>
 						</div>
