--- a/po/translated/pt/business.html
+++ b/po/translated/pt/business.html
@@ -15,8 +15,8 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Esta é uma lista de aplicativos recomendados adequados para as empresas.</p>
-						<p>Quando você clica no botão instalar todos os aplicativos listados serão
+						<p>Esta é uma lista de aplicativos recomendados e adequados para as empresas.</p>
+						<p>Quando você clica no botão instalar, todos os aplicativos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
 					</td>
@@ -41,15 +41,14 @@ target="_blank">http://www.gnucash.org</a></td>
 				<tr><td colspan="2" class="app_title">Dolibarr</td></tr>
 				<tr>
 					<td>
-						<p>Dolibarr ERP e CRM é um software moderno e fácil de usar web para gerar os
-seus negócios (contatos, faturas, encomendas, produtos, stocks, agenda,
-emailings, etc ...).</p>
+						<p>Dolibarr ERP & CRM é um programa da Web moderno e fácil de utilizar para a
+sua empresa (contactos, faturas, encomendas, stocks, agenda, etc...).</p>
 						<p>Na primeira execução, a configuração final é iniciada. Você terá que
 preencher as seguintes informações:</p>
 						 <ul>
-							 <li>Senha para o proprietário da base de dados Dolibarr: Dolibarr</li>
+							 <li>Senha para o proprietário da base de dados Dolibarr: dolibarr</li>
 							 <li>Acesso de super-utilizador: root / your_root_password</li>
-							 <li>Dolibarr administrador login : admin / admin</li>
+							 <li>Dolibarr login de administrador : admin / admin</li>
 						 </ul>
 						<p>Substituir "your_root_password" com a sua senha de root.</p>
 					</td>
@@ -57,7 +56,7 @@ preencher as seguintes informações:</p>
 				</tr>
 				<tr>
 					<td class="app_homepage">Página inicial: <a href="http://www.dolibarr.org/"
-target="_blank">http://www.dolibarr.org</a></td>
+target="_blank">http://www.dolibarr.pt</a></td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Letodms</td></tr>
 				<tr>
@@ -79,8 +78,8 @@ target="_blank">http://www.letodms.com</a></td>
 				<tr><td colspan="2" class="app_title">ProjectLibre</td></tr>
 				<tr>
 					<td>
-						<p>Projectlibre é um sistema de software de gestão de projetos. Ele pretende
-ser um substituto de desktop completo para Microsoft Project.</p>
+						<p>ProjectLibre é um sistema de software de gestão de projetos. Ele pretende
+ser um substituto completo em área de trabalho para Microsoft Project.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="projectlibre" src="../link/screenshots/projectlibre.jpg" /></td>
 				</tr>
