--- a/po/translated/pt/drivers.html
+++ b/po/translated/pt/drivers.html
@@ -13,13 +13,13 @@
 			<p>SolydXK vem com uma grande variedade de drivers pré-instalados. Para a
 maioria dos propósitos esses drivers são suficientes, mas em alguns casos, o
 melhor desempenho é fornecido pelos drivers proprietários do fabricante.</p>
-			<p>O botão de instalação irá abrir o Gestor de drivers de dispositivo
-(DDM). Esta é uma ferramenta para ajudar você a instalar esses drivers de
+			<p>O botão de instalação irá abrir o Gestor de Drivers de Dispositivo
+(GDD). Esta é uma ferramenta para ajudar você a instalar esses drivers de
 hardware. Ele irá verificar o seu hardware e lista todos os drivers
 proprietários disponíveis que você pode instalar. Você só precisa selecionar
-o driver recomendado para seu hardware e DDM fará o resto.</p>
+o driver recomendado para seu hardware e GDD fará o resto.</p>
 			<p>Actualmente <strong> Nvidia </ strong>, <strong> ATI </ strong> e <strong>
-Broadcom </ strong> drivers podem ser instalados. DDM também permite
+Broadcom </ strong> drivers podem ser instalados. GDD também permite
 instalar o <strong> PAE </ strong> kernel para sistemas multi-core de 32
 bits.</p>
 		</div>
