--- a/po/translated/pt/games.html
+++ b/po/translated/pt/games.html
@@ -14,7 +14,7 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Todo o trabalho e nenhum jogo ...</p>
+						<p>Só trabalho e nenhuma diversão...</p>
 						<p>Quando você clica no botão instalar, todos os jogos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
@@ -39,8 +39,8 @@ target="_blank">http://store.steampowered.com</a></p>
 				<tr><td colspan="2" class="app_title">Minetest</td></tr>
 				<tr>
 					<td>
-						<p>Minetest é um jogo sandbox fechado de um mundo infinito e um motor de jogo,
-inspirado por Infiniminer, Minecraft e similares.</p>
+						<p>Minetest é um jogo de sandbox bloco infinito-mundo e um motor de jogo,
+inspirado por InfiniMiner, Minecraft e afins.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="minetest" src="../link/screenshots/minetest.jpg" /></td>
 				</tr>
@@ -54,11 +54,12 @@ target="_blank">http://minetest.net</a></p>
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 AD (pronuncia-se "zero-ey dee") é um jogo histórico gratuito, open-source,
-Real Time Strategy (RTS), atualmente em desenvolvimento pela Wildfire Games,
-um grupo global de desenvolvedores de jogos voluntário. Como o líder de uma
-civilização antiga, você deve reunir os recursos necessários para levantar
-uma força militar e dominar seus inimigos.</p>
+						<p>0 AD (pronuncia-se "zero-ey dee") é um jogo histórico gratuito,
+código-aberto, Estratégia em Tempo Real (RTS), atualmente em desenvolvimento
+pela Wildfire Games, um grupo global de programadores de jogos
+voluntário. Como o líder de uma civilização antiga, você deve reunir os
+recursos necessários para levantar uma força militar e dominar seus
+inimigos.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="0ad" src="../link/screenshots/0ad.jpg" /></td>
 				</tr>
@@ -72,8 +73,8 @@ target="_blank">http://play0ad.com</a></p>
 				<tr><td colspan="2" class="app_title">The Battle for Wesnoth</td></tr>
 				<tr>
 					<td>
-						<p>The Battle for Wesnoth é um jogo tático de estratégia baseado em turnos com
-um tema de alta fantasia.</p>
+						<p>The Battle for Wesnoth é um jogo tático de estratégia com base em um tema de
+alta fantasia.</p>
 						<p>Construa um grande exército, transformando gradualmente recrutas crus em
 veteranos endurecidos. Em jogos mais tarde, lembre os seus guerreiros mais
 resistentes em formar um anfitrião mortal que ninguém pode ficar contra!
