--- a/po/translated/pt/home.html
+++ b/po/translated/pt/home.html
@@ -16,7 +16,7 @@
 					<td colspan="2">
 						<p>Esta é uma lista de aplicações recomendadas e adaptadas para utilizadores
 domésticos.</p>
-						<p>Quando você clica no botão instalar todos os aplicativos listados serão
+						<p>Quando você clica no botão instalar, todos os aplicativos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
 					</td>
@@ -57,8 +57,8 @@ target="_blank">https://inkscape.org</a></td>
 					<td>
 						<p>Shotwell é um organizador de imagens projetado para fornecer uma gestão de
 fotos pessoais.</p>
-						<p>Shotwell pode importar fotos e vídeos de uma câmera digital
-diretamente. Shotwell agrupa automaticamente as fotos e vídeos por data, e
+						<p>Shotwell pode importar fotos e vídeos diretamente de uma câmera
+digital. Shotwell agrupa automaticamente as fotos e vídeos por data, e
 suporta etiquetagem. Seus recursos de edição de imagens permitem aos
 utilizadores endireitar, cortar, eliminar olhos vermelhos e ajustar os
 níveis e equilíbrio de cores.</p>
@@ -71,7 +71,7 @@ Shotwell</p>
 					<td class="app_homepage">
 						<p>Página inicial do Shotwell: <a href="https://wiki.gnome.org/Apps/Shotwell/"
 target="_blank">https://wiki.gnome.org/Apps/Shotwell</a></p>
-						<p>Página inicial do Digikamm: <a href="https://www.digikam.org/"
+						<p>Página inicial do Digikam: <a href="https://www.digikam.org/"
 target="_blank">https://www.digikam.org</a></p>
 					</td>
 				</tr>
