--- a/po/translated/pt/libreoffice.html
+++ b/po/translated/pt/libreoffice.html
@@ -14,7 +14,7 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Quando você clica no botão instalar todos os aplicativos listados serão
+						<p>Quando você clica no botão instalar, todos os aplicativos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
 					</td>
@@ -24,13 +24,14 @@ instalá-los separadamente.</p>
 					<td>
 						<p>SolydXK vem com a suíte LibreOffice pré-instalada. A sua estabilidade e
 características funciona muito bem para a maioria das pessoas e
-especialmente, para as empresas. No entanto, se você está faltando alguns
+especialmente, para as empresas. No entanto, se lhe está faltando alguns
 recursos ou você quer o LibreOffice para se manter atualizado você pode
 instalar o LibreOffice a partir do repositório backports.</p>
 						<p>Backports são novos pacotes recompilados para o ambiente estável
 atual. Então, eles vão correr sem novas bibliotecas.</p>
 						<p class="warning">Embora você possa executar mais atualizações de software usando o
-repositório backports, você introduzir um maior risco de quebra ao fazê-lo.</p>
+repositório backports, você irá introduzir um maior risco de quebra ao
+fazê-lo.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/libreoffice.jpg" /></td>
 				</tr>
