--- a/po/translated/pt/multimedia.html
+++ b/po/translated/pt/multimedia.html
@@ -20,15 +20,15 @@ ou de segurança.</p>
 				<tr>
 					<td>
 						<p>HTML5 é o media player por padrão no Firefox.</p>
-						<p>Youtube e outros sites já estão fornecendo seu conteúdo usando HTML5. No
-entanto, ainda existem sites que usam Flash.</p>
+						<p>Youtube e outros sitios já estão a fornecer conteúdo usando HTML5. No
+entanto, ainda existem sitios que usam Flash.</p>
 					</td>
 				</tr>
 				<tr>
 					<td class="app_homepage">
 						<div class="warning">
 							<p>Aviso:</p>
-							<p>Esteja ciente de que o Flash não é Open Source. Alguns conteúdos em Flash
+							<p>Esteja ciente de que o Flash não é Código Aberto. Alguns conteúdos em Flash
 podem danificar o seu sistema.</p>
 						</div>
 					</td>
@@ -38,8 +38,8 @@ podem danificar o seu sistema.</p>
 					<td>
 						<p>A maioria dos DVDs comerciais estão encriptados com CSS (Content Scramble
 System), que tenta restringir o software que pode ler um DVD.</p>
-						<p>Não SolydXK não vêm com os pacotes necessários pré-instalados para
-reproduzir esses DVDs encriptados.</p>
+						<p>SolydXK não vêm com os pacotes necessários pré-instalados para reproduzir
+esses DVDs encriptados.</p>
 						<p>Ao clicar no botão abaixo instalar os seguintes pacotes serão instalados no
 seu sistema:</p>
 						<ul>
