--- a/po/translated/pt/system.html
+++ b/po/translated/pt/system.html
@@ -7,14 +7,14 @@
   <body>
     <div id="background"></div>
     
-	<h1 class="title">Aplicações do sistema</h1>
+	<h1 class="title">Aplicações de sistema</h1>
 
 	<div class="main">
 		<div class="content">
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Quando você clica no botão instalar todos os aplicativos listados serão
+						<p>Quando você clica no botão instalar, todos os aplicativos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
 					</td>
@@ -35,12 +35,12 @@ target="_blank">http://gparted.sourceforge.net</a></td>
 				<tr><td colspan=2 class="app_title">VirtualBox</td></tr>
 				<tr>
 					<td>
-						<p>VirtualBox é um virtualizer completo de propósito geral para hardware x86,
-voltado para servidor, desktop e uso embutido. O pacote VirtualBox instala
-num sistema operacional de host existente como um aplicativo; este
-aplicativo host permite que os sistemas operacionais convidados adicionais,
-cada um conhecido como um sistema operacional do cliente, para carregar e
-executar, cada um com seu próprio ambiente virtual.</p>
+						<p>VirtualBox é um virtualizador completo de proposta geral para hardware x86 e
+x64, voltado para servidor, ambiente de trabalho e uso embutido. O pacote
+VirtualBox instala-se  num sistema operativo anfitrião existente como um
+aplicativo; este aplicativo anfitrião permite que os adicionais sistemas
+operativos convidados, cada um conhecido como um sistema operativo cliente,
+para carregar e executar, cada um com seu próprio ambiente virtual.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/virtualbox.jpg" /></td>
 				</tr>
@@ -51,9 +51,9 @@ target="_blank">https://www.virtualbox.org</a></td>
 				<tr><td colspan=2 class="app_title">FileZilla</td></tr>
 				<tr>
 					<td>
-						<p>FileZilla FTP Client é um cross-plataforma rápida e confiável, FTPS e SFTP
-cliente com bastantes características úteis e uma interface de utilizador
-gráfica intuitiva.</p>
+						<p>FileZilla é um cliente FTP, FTPS e SFTP, multi-plataforma rápido e confiável
+com bastantes características úteis e uma interface de utilizador gráfica
+intuitiva.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/filezilla.jpg" /></td>
 				</tr>
