--- a/po/translated/pt/welcome.html
+++ b/po/translated/pt/welcome.html
@@ -12,42 +12,44 @@
 		<div class="content">
 			<p class="app_title">Obrigado por usar SolydXK</p>
 			<p>SolydXK é um sistema operativo de código aberto de ambiente de trabalho para
-empresas, organizações e utilizadores domésticos.</p>
+empresas, organizações e utilizadores domésticos. Ambos SolydX e SolydK são
+baseados em Debian estável o que garante uma grande estabilidade e
+segurança.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p class="alert">Por favor, considere uma doação. Sua doação é muito apreciada e assegura que
-possamos continuar a melhorar SolydXK.</p></td>
+						<td><p class="alert">Por favor, considere em fazer uma doação. A sua doação será muito apreciada
+e assegura que possamos continuar a melhorar SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
 			</p>
 			<p>Nós criamos uma lista de software recomendado para empresas e utilizadores
 domésticos que você pode instalar nas páginas seguintes.</p>
-			<p>Clique no butão <strong>Seguinte</strong> para começar.</p>
+			<p>Clique no botão <strong>Seguinte</strong> para começar.</p>
 			<table>
 				<tr><td colspan="2" class="app_title">Software</td></tr>
 				<tr>
 					<td><p>	Todo o software é construído, mantido e controlado pela comunidade. Base de
-dados de software chamados "repositórios" são usados para oferecer e manter
-mais de 60.000 pacotes de software. Assim, não há necessidade de descarregar
-software a partir de sites duvidosos. Você simplesmente procura e instala o
-software que você precisa com o Gestor de Software.</p></td>
-					<td rowspan="2"><img class="screenshot" alt="Gestor de software" src="../link/screenshots/softwaremanager.jpg" /></td>
+dados de software chamados de "repositórios" são usados para oferecer e
+manter mais de 60.000 pacotes de software. Assim, não há necessidade de
+descarregar software a partir de sitios duvidosos. Você simplesmente procura
+e instala o software que precisa com o Gestor de Software.</p></td>
+					<td rowspan="2"><img class="screenshot" alt="gestordesoftware" src="../link/screenshots/softwaremanager.jpg" /></td>
 				</tr>
 				<tr>
 					<td class="app_homepage"></td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Suporte</td></tr>
 				<tr>
-					<td><p>Se você é novo para o SolydXK ou sempre que você ficar bloqueado, há a
+					<td><p>Se você é novo no SolydXK ou sempre que você ficar bloqueado, há a
 comunidade SolydXK para ajudá-lo a resolver o seu problema. Você pode
 procurar o fórum para descobrir se o problema já foi resolvido ou iniciar um
 novo tópico para obter ajuda.</p></td>
-					<td rowspan="2"><img class="screenshot" alt="forum" src="../link/screenshots/forum.jpg" /></td>
+					<td rowspan="2"><img class="screenshot" alt="fórum" src="../link/screenshots/forum.jpg" /></td>
 				</tr>
 				<tr>
-					<td class="app_homepage">Forum: <a href="http://forums.solydxk.com/"
+					<td class="app_homepage">Fórum: <a href="http://forums.solydxk.com/"
 target="_blank">http://forums.solydxk.com</a></td>
 				</tr>
 				<tr>
