--- a/po/translated/pt/wine.html
+++ b/po/translated/pt/wine.html
@@ -14,7 +14,7 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Quando você clica no botão instalar todos os aplicativos listados serão
+						<p>Quando você clica no botão instalar, todos os aplicativos listados serão
 instalados no seu sistema. Você pode usar o gestor de software para
 instalá-los separadamente.</p>
 					</td>
