Flat logo in background information pages

--- a/po/translated/nb/business.html
+++ b/po/translated/nb/business.html
@@ -27,9 +27,9 @@ separat.</p>
 						<p>GnuCash er et regnskapsprogram til bruk for privatpersoner eller
 småbedrifter.</p>
 						<p>Utformet for å være enkel å bruke, men likevel kraftig og fleksibel, GnuCash
-kan hjelpe deg å holde orden på bankkontoer, aksjer, inntekter og
-kostnader. Så rask og intuitiv å bruke som et sjekkhefteregister, det basert
-på profesjonelle prinsipper for å sikre balanserte bøker og nøyaktige
+kan hjelpe deg å holde orden på bankkonti, aksjer, inntekter og
+kostnader. Så rask og intuitiv å bruke som et sjekkhefteregister. Det er
+basert på profesjonelle prinsipper for å sikre balanserte bøker og nøyaktige
 rapporter.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="gnucash" src="../link/screenshots/gnucash.jpg" /></td>
