--- a/po/translated/nb/home.html
+++ b/po/translated/nb/home.html
@@ -24,9 +24,9 @@ separat.</p>
 				<tr>
 					<td>
 						<p>GIMP er et akronym for GNU Image Manipulation Program. Det er et fritt
-distribuer program for oppgaver som fotoretusjering, billedkomposisjon og
+distribuert program for oppgaver som fotoretusjering, billedkomposisjon og
 billedredigering.</p>
-						<p>Det har mange funksjoner. Den kan brukes som en enkel tegneprogram, et
+						<p>Det har mange funksjoner. Den kan brukes som et enkelt tegneprogram, et
 kvalitets fotoretusjering program for eksperter, et online satsvis
 behandlingssystem, masseproduksjons billedrendering, et
 billedkonverteringsprogram, osv.</p>
@@ -54,8 +54,8 @@ target="_blank">https://inkscape.org</a></td>
 				<tr><td colspan="2" class="app_title">Shotwell / Digikam</td></tr>
 				<tr>
 					<td>
-						<p>Shotwell er en billedorganiserer utformet for å gi deg personlig foto
-styring.</p>
+						<p>Shotwell er en billedorganiserer utformet for å gi deg personlig
+fotostyring.</p>
 						<p>Shotwell kan importere bilder og video direkte fra et
 digitalkamera. Shotwell grupperer automatisk bilder og video etter dato og
 støtter merking. Dets billedbehandlingsfunksjoner tillater brukere å rette
@@ -69,7 +69,7 @@ Shotwell</p>
 					<td class="app_homepage">
 						<p>Hjemmeside Shotwell: <a href="https://wiki.gnome.org/Apps/Shotwell/"
 target="_blank">https://wiki.gnome.org/Apps/Shotwell</a></p>
-						<p>Hjemmeside Digikamm: <a href="https://www.digikam.org/"
+						<p>Hjemmeside Digikam: <a href="https://www.digikam.org/"
 target="_blank">https://www.digikam.org</a></p>
 					</td>
 				</tr>
@@ -141,7 +141,7 @@ target="_blank">https://kdenlive.org</a></p>
 				<tr>
 					<td>
 						<p>Transmission er en BitTorrent-klient som har et enkelt grensesnitt på toppen
-av en kryssplattforms-bakstykke.</p>
+av et kryssplattforms-bakstykke.</p>
 						<p>Ktorrent er installert for SolydK. Det har den samme funksjonaliteten som
 Transmission</p>
 					</td>
