--- a/po/translated/nb/libreoffice.html
+++ b/po/translated/nb/libreoffice.html
@@ -29,7 +29,7 @@ oppdatert kan du installere LibreOffice fra arkivet for tilbakeporteringer.</p>
 						<p>Tilbakeporteringer er pakker for gjeldende stabile miljø, som er
 rekompilert, så vil de kjøre uten nye biblioteker.</p>
 						<p class="warning">Selv om du kan kjøre mer oppdatert programvare ved å bruke arkivet for
-tilbakeporteringer vil få en større risiko for at noe slutter å virke.</p>
+tilbakeporteringer vil det være en større risiko for at noe slutter å virke.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/libreoffice.jpg" /></td>
 				</tr>
