--- a/po/translated/nb/system.html
+++ b/po/translated/nb/system.html
@@ -22,7 +22,7 @@ separat.</p>
 				<tr><td colspan=2 class="app_title">Gparted</td></tr>
 				<tr>
 					<td>
-						<p>GParted er et fri partisjonredigerer for å kunne administrere partisjoner i
+						<p>GParted er en fri partisjonredigerer for å kunne administrere partisjoner i
 et grafisk miljø. Med GParted kan du endre størrelse, kopiere og flytte
 partisjoner uten å miste data.</p>
 					</td>
@@ -38,7 +38,7 @@ target="_blank">http://gparted.sourceforge.net</a></td>
 						<p>VirtualBox er en almenn full virtualiserer for x86 maskinvare, rettet mot
 server, desktop og innebygget bruk. VirtualBox-pakken installeres på et
 eksisterende vertsoperativsystem som et program; dette vertsprogrammet
-tillater flere gjesteoperativsystemer, hvert kjent som en gjesteOS, å starte
+tillater flere gjesteoperativsystemer, hvert kjent som et gjesteOS, å starte
 og kjøre i hvert sitt egne virtuelle miljø.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/virtualbox.jpg" /></td>
@@ -50,7 +50,7 @@ target="_blank">https://www.virtualbox.org</a></td>
 				<tr><td colspan=2 class="app_title">FileZilla</td></tr>
 				<tr>
 					<td>
-						<p>FileZilla Client er en rask og pålitelig multiplattform FTP, FTPS og
+						<p>FileZilla Client er en rask og pålitelig multiplattforms FTP, FTPS og
 SFTP-klient med masse nyttige funksjoner og et intuitivt grafisk
 brukergrensesnitt.</p>
 					</td>
