--- a/po/translated/nb/welcome.html
+++ b/po/translated/nb/welcome.html
@@ -12,7 +12,7 @@
 		<div class="content">
 			<p class="app_title">Takk for at du bruker SolydXK</p>
 			<p>SolydXK er et operativsystem, basert på åpen kildekode, for bedrifter,
-organisasjoner og hjemmebrukere. Både SolydXK og SolydxK er basert på Debian
+organisasjoner og hjemmebrukere. Både SolydX og SolydK er basert på Debian
 stable for å sikre størst mulig stabilitet og sikkerhet.</p>
 			<p>
 				<table>
