--- a/po/translated/nb/wine.html
+++ b/po/translated/nb/wine.html
@@ -25,8 +25,8 @@ separat.</p>
 						<p>SolydXK kommer med et bredt utvalg av programvare. Likevel, hvis du ikke
 finner riktig programvare i vårt depot og du må bruke MS
 Windows-programvare, kan du installere det ved hjelp av PlayOnLinux. Ikke
-alle programvare kan kjøres på denne måten, men et stort antall programmer
-er allerede støttet.</p>
+all programvare kan kjøres på denne måten, men et stort antall programmer er
+allerede støttet.</p>
 						<p>Du kan se en veiledning om å <a
 href="http://solydxk.com/get-support/tutorials/#msoffice"
 target="_blank">installere MS Office 2010 med PlayOnLinux</a> på vår
