Replace “ (U+201C) with ascii "

--- a/po/en/games.html
+++ b/po/en/games.html
@@ -47,7 +47,7 @@
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 A.D. (pronounced “zero-ey-dee”) is a free, open-source, historical Real Time Strategy (RTS) game currently under development by Wildfire Games, a global group of volunteer game developers. As the leader of an ancient civilization, you must gather the resources you need to raise a military force and dominate your enemies.</p>
+						<p>0 A.D. (pronounced "zero-ey-dee") is a free, open-source, historical Real Time Strategy (RTS) game currently under development by Wildfire Games, a global group of volunteer game developers. As the leader of an ancient civilization, you must gather the resources you need to raise a military force and dominate your enemies.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="0ad" src="../link/screenshots/0ad.jpg" /></td>
 				</tr>
