--- a/po/translated/nb/games.html
+++ b/po/translated/nb/games.html
@@ -53,7 +53,7 @@ target="_blank">http://minetest.net</a></p>
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 A.D. (uttalt “zero-ey-dee”) er et fritt, historisk sanntids strategispill,
+						<p>0 A.D. (uttalt "zero-ey-dee") er et fritt, historisk sanntids strategispill,
 baser på åpen kildekode, som utvikles av Wildfire Games, en internasjonal
 gruppe av frivillige spill-utviklere. Som leder av en eldgammel
 sivilisasjon, må du samle de ressursene du trenger for å bygge en
