Fix --force-yes for Stretch

--- a/po/translated/pt/games.html
+++ b/po/translated/pt/games.html
@@ -54,12 +54,11 @@ target="_blank">http://minetest.net</a></p>
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 AD (pronuncia-se "zero-ey dee") é um jogo histórico gratuito,
+						<p>0 AD (pronuncia-se "zero-ey dee") é um jogo histórico gratuito, de
 código-aberto, Estratégia em Tempo Real (RTS), atualmente em desenvolvimento
-pela Wildfire Games, um grupo global de programadores de jogos
-voluntário. Como o líder de uma civilização antiga, você deve reunir os
-recursos necessários para levantar uma força militar e dominar seus
-inimigos.</p>
+pela Wildfire Games, um grupo voluntário global de programadores de
+jogos. Como um líder de uma civilização antiga, você deve reunir os recursos
+necessários para levantar uma força militar e dominar seus inimigos.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="0ad" src="../link/screenshots/0ad.jpg" /></td>
 				</tr>
